@startuml
class User {
}

class Team {
  name
}

class Team::Member {
  status: [invited, joined, leaved]
  role: [owner, participant]
}

class Team::Member::TargetHours {
  since
  hours
}


class Team::Progress {
  start
  end
  description
}

class Tag::Target

class Tag {
  name
  description
}

User "1" -- "*" Team::Member
Team "1" -- "*" Team::Member
Team "1" -- "*" Team::Progress

Team::Member "1" -- "*" Team::Member::TargetHours
Team::Member "*" -- "*" Team::Progress

Tag::Target "*" -- "1" Tag
Tag::Target "*" -- "1" Team
Tag::Target "*" -- "1" Team::Progress

@enduml